src/main/java/com/example/GemSkillAssessment/error/NotFoundException.java
package com.example.GemSkillAssessment.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}
